load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "server",
    size = "small",
    srcs = [
        "TestServer.java",
    ],
    tags = [
        "L0",
    ],
    test_class = "service.server.TestServer",
    deps = [
        "//third_party:grpc",
        "//third_party:grpc-testing",
        "//third_party:junit4",
        "//third_party:spring-beans-core-context",
        "//third_party:spring-test",
        "//user-service/src/main/java/service/server",
        "//user-service/src/main/java/service/server:user_service_java_grpc",
        "//user-service/src/test/java/common",
    ],
)
