load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "server",
    size = "small",
    srcs = [
        "TestServerL1.java",
    ],
    tags = [
        "L1",
    ],
    test_class = "service.server.TestServerL1",
    deps = [
        "//third_party:grpc",
        "//third_party:grpc-testing",
        "//third_party:junit4",
        "//third_party:postgres",
        "//third_party:postgres-testcontainer",
        "//third_party:spring-beans-core-context",
        "//third_party:spring-test",
        "//user-service/src/main/java/service/server",
        "//user-service/src/main/java/service/server:user_service_java_grpc",
    ],
)
